# mppi_control_sim

./: README.md
catkin_ws/: BUILD_INSTRUCTIONS.md  COMPILATION_FIXES.md  build.sh  test_build.sh
catkin_ws/.cursor/rules/: rule.mdc
catkin_ws/src/ackermann_navigation/: CMakeLists.txt  README.md  README_FIXED.md  package.xml
catkin_ws/src/ackermann_navigation/config/: controller_params.yaml  navigation.rviz
catkin_ws/src/ackermann_navigation/include/ackermann_navigation/: costmap_manager.h  mppi_controller.h  path_planner.h
catkin_ws/src/ackermann_navigation/launch/: simulation.launch
catkin_ws/src/ackermann_navigation/scripts/: simple_test.py  test_system.py
catkin_ws/src/ackermann_navigation/src/: costmap_manager.cpp  fake_odom_publisher.cpp  mppi_controller.cpp  path_planner.cpp
catkin_ws/src/ackermann_navigation/urdf/: ackermann.urdf
